--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 this.y = y;
                 this.alive = true;
                 this.image = new Image();
-                this.image.src = 'astronaut.png'; // Ensure this image is in the same directory
+                this.image.src = 'astronaut.png.png'; // Ensure this image is in the same directory
             }
             draw() {
                 if (this.alive) {
