--- a/finalhtmlgame.html
+++ b/finalhtmlgame.html
@@ -54,7 +54,7 @@
                 this.y = y;
                 this.alive = true;
                 this.image = new Image();
-                this.image.src = 'astronaut.png'; // Normal astronaut image
+                this.image.src = 'astronaut.png.png'; // Normal astronaut image
                 this.cryingImage = new Image();
                 this.cryingImage.src = 'crying-astronaut.png'; // Crying astronaut image
             }
